<resources>
    <string name="app_name">NoteKeepers</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    <string name="hello_first_fragment">Hello first fragment</string>-->
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="edit_note">Edit Note</string>
    <string name="send_as_email">Send as email</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="notes">Notes</string>
    <string name="curses_nave">Curses</string>
    <string name="notes_nav">Notes</string>
    <string name="send_nav">Send</string>
    <string name="share_nav">Share</string>
    <string name="communicate_nav">Communicate</string>
    <string name="notes_gallary">Note</string>
    <string name="courses_frag">Courses</string>
    <string name="courses">Courses</string>
    <string name="note_fragment">Note Fragment</string>
    <string name="course_fragment">Course Fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>